# math-parser

./: CMakeLists.txt
include/: token.h  tokenizer.h
src/: main.cpp  tokenizer.cpp
tests/: test_tokenizer.cpp
